--- a/primer-parcial/primer-parcial.cbp
+++ b/primer-parcial/primer-parcial.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="automovil.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="automovil.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
